added categories for nav

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       <a href=""><button></button></a>
 
       <h4>Volunteering</h4>
+
+      <h4>Language & Culture</h4>
+      <h4>Government</h4>
       
     </nav>
   <div class="main">
@@ -45,6 +48,7 @@
 
     <h2>Calendar</h2>
     <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23781c1f&amp;ctz=America%2FNew_York&amp;src=Y184ZzJsdGE0MGc4ZTVtY21naDVkaTlkN2c3Z0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%234285F4&amp;showTitle=0&amp;showPrint=0" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <!-- This is the one using the GWC gmail account that we should switch over to. <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffd700&amp;ctz=America%2FNew_York&amp;src=bTFudG5pdjV0a3VldmtkNjIwYm1xNTlzZG9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%237CB342&amp;showNav=1&amp;showDate=1&amp;showPrint=0&amp;showTabs=1&amp;showCalendars=1&amp;showTz=0" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>-->
  
     <script src="script.js"></script>
 
