Consolidated into groups of clubs

--- a/clubSites/scienceOlympiad.html
+++ b/clubSites/scienceOlympiad.html
@@ -14,14 +14,14 @@
       <img id="eagle"src="shsLogo.png">
       <a href="https://clubscalendars.zplumridge.repl.co/index.html"><button>Home</button><a/>
       <h4>STEM</h4>
-      <a href="clubSites/girlsWhoCode.html"><button>Girls Who Code</button></a>
-      <a href="clubSites/mathTeam.html"><button>Math Team</button></a>
-      <a href="clubSites/stemToSchools.html"><button>Stem2Schools</button></a>
-      <a href="clubSites/sciOlympiad"><button>Science Olympiad</button></a>
+      <a href="girlsWhoCode.html"><button>Girls Who Code</button></a>
+      <a href="mathTeam.html"><button>Math Team</button></a>
+      <a href="stemToSchools.html"><button>Stem2Schools</button></a>
+      <a href="scienceOlympiad.html"><button>Science Olympiad</button></a>
       
       <h4>Business & Finance</h4>
-      <a href="clubSites/startup.html"><button>Startup</button></a>
-      <a href="clubSites/deca.html"><button>DECA</button></a>
+      <a href="startup.html"><button>Startup</button></a>
+      <a href="deca.html"><button>DECA</button></a>
       <a href=""><button></button></a>
       <a href=""><button></button></a>
       <a href=""><button></button></a>
