--- a/clubSites/deca.html
+++ b/clubSites/deca.html
@@ -11,8 +11,17 @@
     <nav><!--you can use nav to refer specifically to all nav bars on a website, copy and paste this into each new page. remember to update on other pages as well. -->
       <a href="index.html"><button>Home</button><a/>
       <h4>STEM</h4>
-      <a href="clubSites/girlsWhoCode.html"><button>Girls Who Code</button></a>
-      <a href="clubSites/mathTeam.html"><button>Other Club</button></a>
+      <a href="girlsWhoCode.html"><button>Girls Who Code</button></a>
+      <a href="mathTeam.html"><button>Math Team</button></a>
+      <a href="stemToSchools.html"><button>Stem2Schools</button></a>
+      <a href="scienceOlympiad.html"><button>Science Olympiad</button></a>
+      
+      <h4>Business & Finance</h4>
+      <a href="startup.html"><button>Startup</button></a>
+      <a href="deca.html"><button>DECA</button></a>
+      <a href=""><button></button></a>
+      <a href=""><button></button></a>
+      <a href=""><button></button></a>
       
     </nav>
     <div class="main">
