Deleted individual club pages

--- a/clubSites/creativeClubs.html
+++ b/clubSites/creativeClubs.html
@@ -31,9 +31,9 @@
       <a href="#theater"><button>Theater</button></a>
 
       <h1 id="creativeWriting">Creative Writing</h1>
-      <p>Dates</p>
-      <p>Times</p>
-      <p>Place</p>
+      <p>Tuesdays</p>
+      <p>4-5pm</p>
+      <p>On Zoom </</p>
       <p>Contact</p>
 
 
