--- a/clubSites/volunteeringClubs.html
+++ b/clubSites/volunteeringClubs.html
@@ -33,7 +33,8 @@
       <p>Join Facebook Group: </p>
       <p>Zoom Information: </p>
       <p>Meeting ID: 760 2197 9597</p>
-      
+      <p>Password: 6kkkGm</p>
+      <p>Raise awareness for girls' education around the world and fundraise for our partner school, Zabuli Education Center in Afghanistan
     </div>
     <script src="script.js"></script>
   </body>
