April7thEnd css to more pages, alphabetized groups, scroll to top button

--- a/clubSites/businessClubs.html
+++ b/clubSites/businessClubs.html
@@ -9,7 +9,7 @@
   
   <body>
     <nav>
-      <img id="eagle"src="shsLogo.png">
+      <img id="eagle" src="https://replit.com/@ZPlumridge/ClubsCalendars?from=notifications#shsLogo.png">
       <a href="https://clubscalendars.zplumridge.repl.co/index.html"><button>Home</button><a/>
       <h4><a href="stemClubs.html">STEM</a></h4>
       <h4><a href="businessClubs.html">Business & Finance</a></h4>
@@ -22,12 +22,12 @@
       <h1>Business Clubs</h1>
 
       <h1>Clubs on this page: </h1><!--add in-site links for clubs on this page--><!--update for relavent clubs-->
-      <a href="clubSites/deca.html"><button>DECA</button></a>
-      <a href="clubSites/economics.html"><button>Economics</button></a>
-      <a href="clubSites/startup.html"><button>Startups</button></a>
-      <a href="clubSites/stocks.html"><button>Stocks</button></a>
+      <a href="#deca"><button>DECA</button></a>
+      <a href="#economics"><button>Economics</button></a>
+      <a href="#startups"><button>Startups</button></a>
+      <a href="#stocks"><button>Stocks</button></a>
 
-      <h1>DECA</h1>
+      <h1 id="deca">DECA</h1>
       <p>Wednesdays</p>
       <p>12:00 pm</p>
       <p>Facebook: Sharon High School DECA</p>
@@ -36,14 +36,14 @@
 
       <br>
 
-      <h1>Economics</h1>
+      <h1 id="economics">Economics</h1>
       <p>Schoology group code: 98MM-P8HD-MXWBZ</p>
       <p>Contact: Tanvi Mittal or Jacob Bleeker</p>
       <p>Build your own company, do trivia, invest in a stock market simulation game, and participate in a national competition.</p>
 
       <br>
 
-      <h1>Startups</h1>
+      <h1 id="startups">Startups</h1>
       <p>Mondays</p>
       <p>3:00-3:30 pm</p>
       <p>Place</p><!--There is a QR code in the slides-->
@@ -52,7 +52,7 @@
 
       <br>
 
-      <h1>Stocks</h1>
+      <h1 id="stocks">Stocks</h1>
       <p>Wednesdays</p>
       <p>2:40-3:10 pm</p>
       <p>Zoom</p>
