--- a/clubSites/creativeClubs.html
+++ b/clubSites/creativeClubs.html
@@ -4,21 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="clubscalendars.zplumridge.repl.co/style.css" rel="stylesheet" type="text/css" />
   </head>
   
   <body>
     <nav><!--you can use nav to refer specifically to all nav bars on a website, copy and paste this into each new page-->
-      <img id="eagle"src="shsLogo.png">
-      <a href="https://clubscalendars.zplumridge.repl.co/index.html"><button>Home</button><a/>
-      <h4><a href="stemClubs.html">STEM</a></h4>
-      <h4><a href="businessClubs.html">Business & Finance</a></h4>
-      <h4><a href="volunteeringClubs.html">Volunteering</a></h4>
-      <h4><a href="governmentClubs.html">Government</a></h4>
+      <img id="eagle"src="https://replit.com/@ZPlumridge/ClubsCalendars?from=notifications#shslogo2.png">
+      <a href="https://clubscalendars.zplumridge.repl.co/shsLogo.png"><button>Home</button><a/>
+      <h4><a href="clubSites/businessClubs.html">Business</a></h4>
       <h4><a href="clubSites/creativeClubs.html">Creative</a></h4>
+      <h4><a href="clubSites/governmentClubs.html">Government</a></h4>
       <h4><a href="clubSites/publicationsClubs.html">Publications</a></h4>
-     <!-- <h4><a href="clubSites/__insert name hereCasual/Safe-space/miscClubs.html"></a></h4> -->
       <h4><a href="clubSites/schoolClubs.html">School Leadership</a></h4>
+      <h4><a href="clubSites/stemClubs.html">STEM & Competition</a></h4>
+      <h4><a href="clubSites/volunteeringClubs.html">Volunteering</a></h4>
+      <h4><a href="clubSites/miscClubs.html">Miscellaneous</a></h4>
     </nav>
 
     <div class="main">
@@ -33,28 +33,31 @@
       <h1 id="creativeWriting">Creative Writing</h1>
       <p>Tuesdays</p>
       <p>4-5pm</p>
-      <p>On Zoom </</p>
-      <p>Contact</p>
+      <p>On Zoom </br> Meeting ID: 728 1414 8498 </br> Password: 2HA2W5</p>
+      <p>Contact: </br> kwiebe2022@sharonschools.net or swoodbury2022@sharonschools.net for more info</p>
+      <p>Join the Schoology group! C76J-23WQ-SXF6R</p>
 
 
       <h1 id="culinary">Culinary</h1>
-      <p>Dates</p>
-      <p>Times</p>
-      <p>Place</p>
-      <p>Contact</p>
+      <p>Wednesdays</p>
+      <p>Afternoons (times on facebook)</p>
+      <p>On Zoom</p>
+      <p>Contact: lprenaveau@yahoo.com</p>
+      <p>Join Sharon High School Culinary Club on Facebook!</p>
 
       <h1 id="heartsCrafts">Hearts and Crafts</h1>
-      <p>Dates</p>
-      <p>Times</p>
-      <p>Place</p>
-      <p>Contact</p>
+      <p>Wednesdays</p>
+      <p>3:30pm</p>
+      <p>On Zoom</p>
+      <p>Instagram: @shs_heartsandcrafts</p>
+      <a href="https://forms.gle/7umAWVpmqnZRxiXb6">Sign up here!</a>
       
       <h1 id="theater">Theater</h1>
-      <p>Dates</p>
-      <p>Times</p>
-      <p>Place</p>
-      <p>Contact</p>
-      <p>Website:</p>
+      <p>Dates (depend on area of interest)</p>
+      <p>Times (depend on area of interest)</p>
+      <p>On Zoom</p>
+      <p>Contact: </br> Director (Mr. Langmeyer) - elangmeyer@sharonschools.net </br> Presidents - shstcpresident@gmail.com </br> Stage Manager - shstcstagemanager@gmail.com</p>
+      <a href="http://www.shstheatrecompany.org">shstheatrecompany.org</a>
 
     </div>
     <script src="script.js"></script>
