--- a/clubSites/stemClubs.html
+++ b/clubSites/stemClubs.html
@@ -9,9 +9,9 @@
   
   <body>
     <nav>
-      <img id="eagle"src="shsLogo.png">
+      <img id="eagle"src="https://replit.com/@ZPlumridge/ClubsCalendars?from=notifications#shslogo2.png">
       <a href="https://clubscalendars.zplumridge.repl.co/index.html"><button>Home</button><a/>
-      <h1>STEM Clubs</h1> 
+     
       <h4><a href="businessClubs.html">Business & Finance</a></h4>
       <h4><a href="volunteeringClubs.html">Volunteering</a></h4>
       <h4><a href="languageClubs.html">Language & Culture</a></h4>
@@ -25,6 +25,12 @@
       <a href="mathTeam.html"><button>Math Team</button></a>
       <a href="stemToSchools.html"><button>Stem2Schools</button></a>
       <a href="sciOlympiad"><button>Science Olympiad</button></a>
+      <a href="computerScience.html"><button>Computer Science</button></a>
+      <a href="scienceQuizBowl.html"><button>Science Quiz Bowl</button></a>
+      <a href="quizBowl"><button>Quiz Bowl</button></a>
+      <a href="mathAndSciTourn.html"><button>Math & Science Tournament</button></a>
+      <a href="latin.html"><button>Latin</button></a>
+
 
       
 
