--- a/clubSites/governmentClubs.html
+++ b/clubSites/governmentClubs.html
@@ -30,8 +30,8 @@
       <a href="#debate"><button>Debate</button></a>
       <a href="#dm"><button>Democracy Matters</button></a>
       <a href="#ldd"><button>Lincoln-Douglas Debate</button></a>
-      <a href="clubSites/sciOlympiad"><button>Mock Trial</button></a>
-      <a href="clubSites/sciOlympiad"><button>Model UN</button></a>
+      <a href="#mocktrial"><button>Mock Trial</button></a>
+      <a href="#mun"><button>Model UN</button></a>
       <a name="debate">
       <h1>Debate Club</h1>
       <p>Dates</p>
