--- a/clubSites/publicationsClubs.html
+++ b/clubSites/publicationsClubs.html
@@ -9,7 +9,7 @@
   
   <body>
     <nav><!--you can use nav to refer specifically to all nav bars on a website, copy and paste this into each new page-->
-      <img id="eagle"src="shsLogo.png">
+      <img id="eagle"src="https://replit.com/@ZPlumridge/ClubsCalendars?from=notifications#shslogo2.png">
       <a href="https://clubscalendars.zplumridge.repl.co/index.html"><button>Home</button><a/>
       <h4><a href="stemClubs.html">STEM</a></h4>
       <h4><a href="businessClubs.html">Business & Finance</a></h4>
@@ -24,10 +24,7 @@
     <div class="main">
 
       <h1>Clubs on this page: </h1><!--add in-site links for clubs on this page-->
-      <a href="clubSites/girlsWhoCode.html"><button>Girls Who Code</button></a>
-      <a href="clubSites/mathTeam.html"><button>Math Team</button></a>
-      <a href="clubSites/stemToSchools.html"><button>Stem2Schools</button></a>
-      <a href="clubSites/sciOlympiad"><button>Science Olympiad</button></a>
+      
 
       <h1>Club name here</h1>
       <p>Dates</p>
