--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- use Girls Who Code gmail account for calendar-->
 <!DOCTYPE html>
 <html>
 
@@ -13,19 +12,19 @@
 <body>
 
 	<!-- Some stuff to add or change: organize navigation bar and updates by divs -->
-
+  <a name="backtotop"></a>
 	<nav>
 		<!--you can use nav to refer specifically to all nav bars on a website, copy and paste this into each new page-->
 		<!-- We may want to have a page per section instead of a page per club, to speed it all up.-->
-		<img id="eagle"src="shsLogo.png"><br>
-    <a href="index.html"><button>Home</button><a/><br>
-    <h4><a href="clubSites/stemClubs.html">STEM & Competition</a></h4>
+		<img id="eagle" src="shsLogo.png"><br>
+    <h4><a href="index.html">Home</a></h4>
     <h4><a href="clubSites/businessClubs.html">Business</a></h4>
-    <h4><a href="clubSites/volunteeringClubs.html">Volunteering</a></h4>
-    <h4><a href="clubSites/governmentClubs.html">Government</a></h4>
     <h4><a href="clubSites/creativeClubs.html">Creative</a></h4>
+    <h4><a href="clubSites/governmentClubs.html">Government</a></h4>
     <h4><a href="clubSites/publicationsClubs.html">Publications</a></h4>
     <h4><a href="clubSites/schoolClubs.html">School Leadership</a></h4>
+    <h4><a href="clubSites/stemClubs.html">STEM & Competition</a></h4>
+    <h4><a href="clubSites/volunteeringClubs.html">Volunteering</a></h4>
     <h4><a href="clubSites/miscClubs.html">Miscellaneous</a></h4>
     
   </nav>
@@ -43,7 +42,7 @@
     <h2>Calendar</h2>
     <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23781c1f&amp;ctz=America%2FNew_York&amp;src=Y184ZzJsdGE0MGc4ZTVtY21naDVkaTlkN2c3Z0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%234285F4&amp;showTitle=0&amp;showPrint=0" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     <!-- This is the one using the GWC gmail account that we should switch over to. <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffd700&amp;ctz=America%2FNew_York&amp;src=bTFudG5pdjV0a3VldmtkNjIwYm1xNTlzZG9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%237CB342&amp;showNav=1&amp;showDate=1&amp;showPrint=0&amp;showTabs=1&amp;showCalendars=1&amp;showTz=0" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>-->
- 
+    <a href = "#backtotop"><button  id="myBtn">Back To Top</button></a>
     <script src="script.js"></script>
 
     <footer>
