May5end added footer to all pages added information

--- a/clubSites/copyThisClubs.html
+++ b/clubSites/copyThisClubs.html
@@ -6,21 +6,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="clubscalendars.zplumridge.repl.co/style.css" rel="stylesheet" type="text/css" />
+    <link href="https://clubscalendars.zplumridge.repl.co/style.css" rel="stylesheet" type="text/css" />
   </head>
   
   <body>
     <nav><!--you can use nav to refer specifically to all nav bars on a website, copy and paste this into each new page-->
-      <img id="eagle"src="https://replit.com/@ZPlumridge/ClubsCalendars?from=notifications#shslogo2.png">
-      <a href="https://clubscalendars.zplumridge.repl.co/index.html"><button>Home</button><a/>
-      <h4><a href="clubSites/businessClubs.html">Business</a></h4>
-      <h4><a href="clubSites/creativeClubs.html">Creative</a></h4>
-      <h4><a href="clubSites/governmentClubs.html">Government</a></h4>
-      <h4><a href="clubSites/publicationsClubs.html">Publications</a></h4>
-      <h4><a href="clubSites/schoolClubs.html">School Leadership</a></h4>
-      <h4><a href="clubSites/stemClubs.html">STEM & Competition</a></h4>
-      <h4><a href="clubSites/volunteeringClubs.html">Volunteering</a></h4>
-      <h4><a href="clubSites/miscClubs.html">Miscellaneous</a></h4>
+      <a href="https://clubscalendars.zplumridge.repl.co/index.html"><img id="eagle" src="https://clubscalendars.zplumridge.repl.co/shsLogo.png"></a><br>
+      <h4><a href="businessClubs.html">Business</a></h4>
+      <h4><a href="creativeClubs.html">Creative</a></h4>
+      <h4><a href="governmentClubs.html">Government</a></h4>
+      <h4><a href="publicationsClubs.html">Publications</a></h4>
+      <h4><a href="schoolClubs.html">School Leadership</a></h4>
+      <h4><a href="stemClubs.html">STEM & Competition</a></h4>
+      <h4><a href="volunteeringClubs.html">Volunteering</a></h4>
+      <h4><a href="miscClubs.html">Miscellaneous</a></h4>
 
     </nav>
     <div class="main">
