--- a/clubSites/miscClubs.html
+++ b/clubSites/miscClubs.html
@@ -1,18 +1,17 @@
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Government/Politics Clubs at SHS</title>
+    <title>repl.it</title>
     <link href="https://clubscalendars.zplumridge.repl.co/style.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" type="image/png" href="https://clubscalendars.zplumridge.repl.co/shslogo2.png"/>
   </head>
   
   <body>
     <a name="backtotop"></a>
-    <nav>
+    <nav><!--you can use nav to refer specifically to all nav bars on a website, copy and paste this into each new page-->
       <a href="https://clubscalendars.zplumridge.repl.co/index.html"><img id="eagle" src="https://clubscalendars.zplumridge.repl.co/shsLogo.png"></a><br>
-      <button>Home</button><a/>
       <h4><a href="businessClubs.html">Business</a></h4>
       <h4><a href="creativeClubs.html">Creative</a></h4>
       <h4><a href="governmentClubs.html">Government</a></h4>
@@ -20,46 +19,36 @@
       <h4><a href="schoolClubs.html">School Leadership</a></h4>
       <h4><a href="stemClubs.html">STEM & Competition</a></h4>
       <h4><a href="volunteeringClubs.html">Volunteering</a></h4>
-      <h4><a href="miscClubs.html">Miscellaneous</a></h4>   
+      <h4><a href="miscClubs.html">Miscellaneous</a></h4>
     </nav>
 
     <div class="main">
-      <h1>Government Clubs</h1>
-      <a href="#debate"><button>Debate</button></a>
-      <a href="#dm"><button>Democracy Matters</button></a>
-      <a href="#ldd"><button>Lincoln-Douglas Debate</button></a>
-      <a href="#mocktrial"><button>Mock Trial</button></a>
-      <a href="#mun"><button>Model UN</button></a>
-      <a name="debate">
-      <h1>Debate Club</h1>
-      <p>Dates</p>
-      <p>Times</p>
-      <p>Place</p>
-      <p>Contact</p>
-      <a name="dm">
-      <h1>Democracy Matters</h1>
-      <p>Dates</p>
-      <p>Times</p>
-      <p><a>www.democracymatters.org</a></p>
-      <p>Contact Ruemon Bhattacharyya at <a>rbhattacharyya2022@sharonschools.net</a></p>
-      <a name="ldd">
-      <h1>Lincoln-Douglas Debate</h1>
-      <p>Dates: Mondays</p>
-      <p>Times: 3:30pm</p>
-      <p>737 8668 7213<br>SHSDebate</p>
-      <p>Contact Oliver Farrell at <a>ofarrell2022@sharonschools.net</a></p>
-      <a name="mocktrial">
-      <h1>Mock Trial</h1>
-      <p>Dates:Mondays-Thursdays</p>
-      <p>Times: 2:30-4:30pm</p>
-      <p></p>
-      <p>Contact  at <a></a></p>
-      <a name="mun">
-      <h1>Model UN</h1>
-      <p>Dates:Wednesdays</p>
-      <p>Times: 3pm</p>
-      <p></p>
-      <p>Contact  at <a></a></p>
+      <h1>Miscellaneous</h1>
+
+      <h1>Clubs on this page: </h1><!--add in-site links for clubs on this page--><!--update for relavent clubs-->
+      <a href="#bsu"><button>Black Student Union</button></a>
+      <a href="#booksandbagels"><button>Books and Bagels</button></a>
+      <a href="#chess"><button>Chess</button></a>
+      <a href="#esports"><button>Gaming and Esports</button></a>
+      <a href="#gsa"><button>Gay-Straight Alliance</button></a>
+      <a href="#jsu"><button>Jewish Student Union</button></a>
+      <a href="#oasis"><button>Oasis Christian Club</button></a>
+      <a href="#sportspsych"><button>Pysched for Sports</button></a>
+      <a href="#sociology"><button>Sociology Club</button></a>
+
+      <h1 id="booksandbagels">Books and Bagels</h1>
+     
+      <p> Day: Tuesday  <br>
+      Time: once a month during Eagle Block<br>
+      </p>
+      <p> Contact: <br>
+      &nbsp; Sadie: <a href="mailto:sadiearundale@icloud.com">sadiearundale@icloud.com</a> <br>
+      &nbsp;  Dana: <a href="mailto:dblatte@gmail.com">dblatte@gmail.com</a> <br>
+      &nbsp;  Rachel <a href="mailto:rrakushkin2022@sharonschools.net">rrakushkin2022@sharonschools.net</a> <br>
+      </p>
+      <hr>
+
+      
     </div>
 
     <footer>
