--- a/clubSites/volunteeringClubs.html
+++ b/clubSites/volunteeringClubs.html
@@ -4,23 +4,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="https://clubscalendars.zplumridge.repl.co/style.css" rel="stylesheet" type="text/css" />
   </head>
   
   <body>
+    <a name="backtotop"></a>
     <nav>
-      <img id="eagle"src="https://replit.com/@ZPlumridge/ClubsCalendars?from=notifications#shslogo2.png">
-      <a href="https://clubscalendars.zplumridge.repl.co/index.html"><button>Home</button><a/>
-      <h2> Volunteering Clubs </h2>
-      <h4><a href="stemClubs.html">STEM</a></h4>
-      <h4><a href="businessClubs.html">Business & Finance</a></h4>
-      <h4><a href="volunteeringClubs.html">Volunteering</a></h4>
-      <h4><a href="languageClubs.html">Language & Culture</a></h4>
+      <a href="https://clubscalendars.zplumridge.repl.co/index.html"><img id="eagle" src="https://clubscalendars.zplumridge.repl.co/shsLogo.png"></a><br>
+      <h4><a href="businessClubs.html">Business</a></h4>
+      <h4><a href="creativeClubs.html">Creative</a></h4>
       <h4><a href="governmentClubs.html">Government</a></h4>
+      <h4><a href="publicationsClubs.html">Publications</a></h4>
+      <h4><a href="schoolClubs.html">School Leadership</a></h4>
+      <h4><a href="stemClubs.html">STEM & Competition</a></h4>
+      <h4><a href="volunteeringClubs.html">Volunteering</a></h4>
+      <h4><a href="miscClubs.html">Miscellaneous</a></h4>
       
     </nav>
     <div class="main">
-
+      <h1>Volunteering Clubs</h1> 
       <h1>Clubs on this page: </h1><!--add in-site links for clubs on this page--><!--Update for relavent clubs-->
 
       <h1>Breast Cancer Awareness Club</h1>
@@ -50,7 +52,28 @@
 
      <br>
 
-     <h1>
+     <h1>Eagle Helping Hands</h1>
+     <p>Wednesdays</p>
+     <p>11:30 am</p>
+     <p>If you are interested in joining, email cfoulger@icloud.com and we'll add you to the email list with the zoom link!</p>
+     <p>Eagle Helping Hands strives to help the community in any way possible, while also creating a fun community together. A sock drive for the homeless is our current project, but we're also in the process of planning more service projects. Especially with local nursing homes. We're working to plan engaging, virtual activities with them!</p>
+
+     <br>
+
+     <h1>Enviromental Club</h1>
+     <p>Thrusdays</h1>
+     <p>3:00 - 3:30 pm</p>
+     <p>litter clean up video:</p>
+     <p><a
+     href="https://www.youtube.com/watch?v=UjxK21avXlI&feature=emb_title">
+     https://www.youtube.com/watch?v=UjxK21avXlI&feature=emb_title</a></p>
+     <p>Link to sign up:</p>
+     <p><a
+     href="https://docs.google.com/forms/d/e/1FAIpQLSccfmbQsdiVK_ArKpKuvMMunebLJY466TFWFHPnbQtPe6_r6g/viewform">
+     https://docs.google.com/forms/d/e/1FAIpQLSccfmbQsdiVK_ArKpKuvMMunebLJY466TFWFHPnbQtPe6_r6g/viewform</a></p>
+     <p>Our Facebook group is "SHS Enviromental Club 2020-2021"</p>
+
+     <br>
 
       <h1>Girls Learn International (GLI)</h1>
       <p>Thursdays</p>
@@ -64,6 +87,81 @@
 
       <br>
 
+      <h1>Habitat for Humanity</h1>
+      <p>Wednesdays</p>
+      <p>11:45 pm</p>
+      <p>Zoom Information:</p>
+      <p>Meeting ID: 743 9648 9166</p>
+      <p>Password: 6PnwbG</p>
+      <p>Meeting Link:</p>
+      <p><a
+      href="https://us04web.zoom.us/j/74396489166?pwd=a01EN0dWeWRybFFYMytvVUpyT2JzUT09">
+      https://us04web.zoom.us/j/74396489166?pwd=a01EN0dWeWRybFFYMytvVUpyT2JzUT09</a></p>
+      <p>Email president Carolina Joy: linajoy010@icloud.com or vice president Jeffery Xiang: jeffyxiang@gmail.com</p>
+      <p>Volunteer to help out at ReStore! Volunteer to participate in South Shore Habitiat Builds! Join us and have a positive impact in your community!</p>
+
+      <br>
+
+      <h1>Mental Health Awareness Club</h1>
+      <p>Mondays</p>
+      <p>3:15 - 3:45 pm</p>
+      <p>Contact Thy Uong, Olivia Nau, or Ms. Smoler to Join:</p>
+      <p>tuong2022@sharonschools.net</p>
+      <p>onau2023@sharonschools.net</p>
+      <p>rsmoler@sharonschools.net</p>
+      <p>Our goal is to be able to create a forum for learning and discussing mental health. We know that with the ongoing COVID-19 pandemic, many students are experiencing more stress and anxiety and it is importatnt to promote and learn ways to protect our minds as much as our bodies.</p>
+
+      <br>
+
+      <h1>Operation Smile</h1>
+      <p>Contact Maddie Burton and Gilli Aronson</p>
+      <p>Operation smile is a club at SHS which helps raise money to donate to a larger organization also called Operation Smile. They provide live-saving surgeries that reconstruct cleft palates and lips for kids all around the world. Why do they happen, you may ask? A child being born with a cleft palate is not an uncommon thing: it can occur alone or as a genetic condition or syndrome. It is a split opening in the roof of the mouth and/or lip. It can cause difficulty speaking, feeding, and even insecurities. Surgery helps reconstruct the lip with minimal scarring and restore normal function, and of course the ability to smile! Our club fundraises for this organization. With the money we raise, more surgeries can happen. Every $240 raised transforms a life and restores a smile. Although many students may be fully remote, there are still ways to fundraise online. Both in school and online fundraising will occur and we can think of ideas how to do it together!</p>
+
+      <br>
+
+      <h1>PAWS CLUB</h1>
+      <p>Wednesdays</p>
+      <p>2:45 pm</p>
+      <p>Contact Carly Romanow, Alli Carr, or Mrs. Levitts with any questions!</p>
+      <p>Email shspawsclub1920@gmail.com, join Facebook group P.A.W.S. Club, and follow @pawsclubatshs on Instagram</p>
+      <p>Raise awareness and money for local animal shelters!</p>
+
+      <br>
+
+      <h1>Reach Out 2 Refugees</h1>
+      <p>Thursdays</p>
+      <p>2:45 - 3:30 pm</p>
+      <p>Interested? Contact Juilia Luo or Lena Lee via email or facebook for Zoom links!</p>
+      <p>Questions or suggestions? Contact Julia: jluo2021@sharonschools.net or Lena: llee2021@sharonschools.net</p>
+      <p>Our objective is to raise:</p>
+      <p>1. Money for various organizations supporting refugees & displaced people</p>
+      <p>2. Awareness for national & global issues affecting refugees</p>
+      <p>At least 80 million people around the world have been forcibly displaced - 1% of all humanity. (unhcr.org) Covid-19 has hit refugees especially hard.</p>
+
+      <br>
+
+      <h1>Restoring Our Oceans (ROO)</h1>
+      <p>Tuesdays</p>
+      <p>3:15 pm</p>
+      <p>Every other week</p>
+      <p>Contact: restoringouroceansclub@gmail.com</p>
+      <p>Join our Facebook group - Restoring Our Oceans</p>
+      <p>Club leaders: Eric Lo, Aneeza Ahmad, and Mackenzie Veazey</p>
+      <p>Why: To raise awareness about the declining state of our oceans and to fundraiase for its restoration</p>
+      <p>Facts + Statistics about our Oceans:</p>
+      <p>-There are 25 trillion pieces of debris in the ocean</p>
+      <p>-Pollution has created 500 dead zones (inhabitable places for marine life) in the ocean</p>
+      <p>-Ocean acidification is killing our coral reefs</p>
+      <p>-88% of our oceans' surface is polluted</p>
+      <p>-The United States contributes to about 242 million pounds of trash to our ocean per year</p>
+      <p>Ocean pollution kills about one million sea birds each year</p>
+      <p>Join us in combating this global issue before it becomes too late!</p>
+      <p>If interested, please request to join our facebook group 'Restoring Our Oceans' and complete this google form:</p>
+      <p><a
+      href="https://forms.gle/peMcfdqp5nzZ3jwo9">https://forms.gle/peMcfdqp5nzZ3jwo9</a></p>
+
+      <br>
+
       <h1>Save The Children</h1>
       <p>Mondays</p>
       <p>3:00 - 3:30 pm</p>
@@ -72,13 +170,62 @@
       
       <br>
 
-      <h1>
+      <h1>School On Wheels MA</h1>
+      <p>Thursdays</p>
+      <p>2:45 - 3:15 pm on Zoom</p>
+      <p>Any questions? Contact Fiona Wu or Julia Zelevinshy via our sharon schools emails, or reach out to our advisor, Señora May</p>
+      <p>Join our Schoology group!</p>
+      <p>Code: SS4WK - 8VS65</p>
+      <p>If interested, fill out the form and/or join the schoology group and zoom meeting code will be provided :)</p>
+      <p><a
+      href="http://bit.ly/sowmaclub">http://bit.ly/sowmaclub</a></p>
+      <p>Support students in experiencing holessness through fundraising, volunteering, and working with nonprofit School on Wheels</p>
+      <p>Volunteer Opportunites! Support a Meaningful Cause! Plan and Host Fundraising Events!</p>
+
+      <br>
+
+      <h1>Serving for Sharon</h1>
+      <p>Wednesdays</p>
+      <p>11-30 - 12:00 on Zoom</p>
+      <p>What we do: Volunteer in the community to help people at a disadvantage</p>
+      <p>How we are handling COVID-19: Virtual volunteering, clothing drives, fundraisers</p>
+      <p>How can I join? Contact Jacob Bleeker or Jasmine Ben-Joseph on Schoology</p>
+
+      <br>
+
+      <h1>Shelter Buddies</h1>
+      <p>Thursdays</p>
+      <p>After School during last eagle block (1:40-2:30 pm)-______
+
 
       <br>
 
       <h1>
 
+
+
     </div>
+
+    <footer>
+      <!--add more nav bar, contact us, etc.  -->
+      <!-- SHS, SPS websites, schoology-->
+      <!-- then copy this footer to other pages-->
+      <form>
+        <h4>Update club information</h4>
+        <label for="nameForm">Your name: </label>
+        <input id="nameForm" type="text"><br><br>
+        <label for="clubNameForm">Club name: </label> <br>
+        <input id="clubNameForm" type="text"> <br> <br>
+        <label for="clubUpdateForm"><em>What's changed? What do you want people to know? (When you meet, where you meet, meeting cancelled for a week, bring materials, plans for next time, etc.)</em></label> <br>
+        <textarea id="clubUpdateForm" type="text" rows="3"> </textarea> <br>
+        <button id="clubChangeSubmit" type="submit">Submit</button>
+
+      </form>
+      <br>
+      <a href="https://hs.sharonschools.net/en-US">Sharon High School Website</a>
+      <a href="https:www.sharon.schoology.com">Schoology</a>
+      <p><em>This website is brought to you by the Girls Who Code club of Sharon High School, 2020-2021.</em></p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
