--- a/clubSites/businessClubs.html
+++ b/clubSites/businessClubs.html
@@ -4,18 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="https://clubscalendars.zplumridge.repl.co/style.css" rel="stylesheet" type="text/css" />
   </head>
   
   <body>
+    <a name="backtotop"></a>
     <nav>
-      <img id="eagle" src="https://replit.com/@ZPlumridge/ClubsCalendars?from=notifications#shsLogo.png">
-      <a href="https://clubscalendars.zplumridge.repl.co/index.html"><button>Home</button><a/>
-      <h4><a href="stemClubs.html">STEM</a></h4>
-      <h4><a href="businessClubs.html">Business & Finance</a></h4>
-      <h4><a href="volunteeringClubs.html">Volunteering</a></h4>
-      <h4><a href="languageClubs.html">Language & Culture</a></h4>
+      <a href="https://clubscalendars.zplumridge.repl.co/index.html"><img id="eagle" src="https://clubscalendars.zplumridge.repl.co/shsLogo.png"></a><br>
+      <h4><a href="businessClubs.html">Business</a></h4>
+      <h4><a href="creativeClubs.html">Creative</a></h4>
       <h4><a href="governmentClubs.html">Government</a></h4>
+      <h4><a href="publicationsClubs.html">Publications</a></h4>
+      <h4><a href="schoolClubs.html">School Leadership</a></h4>
+      <h4><a href="stemClubs.html">STEM & Competition</a></h4>
+      <h4><a href="volunteeringClubs.html">Volunteering</a></h4>
+      <h4><a href="miscClubs.html">Miscellaneous</a></h4>
       
     </nav>
     <div class="main">
@@ -59,6 +62,28 @@
       <p>Contact: Venya Gupta @ vgupta2022@sharonschools.net, Sarah Yi @ syi2022@sharonschools.net, or Niki Murthy @ nmurthy2022@sharonschools.net</p>
       <p>Invest in a stock market simulation and learn about stocks.</p>
     </div>
+
+    <footer>
+      <!--add more nav bar, contact us, etc.  -->
+      <!-- SHS, SPS websites, schoology-->
+      <!-- then copy this footer to other pages-->
+      <form>
+        <h4>Update club information</h4>
+        <label for="nameForm">Your name: </label>
+        <input id="nameForm" type="text"><br><br>
+        <label for="clubNameForm">Club name: </label> <br>
+        <input id="clubNameForm" type="text"> <br> <br>
+        <label for="clubUpdateForm"><em>What's changed? What do you want people to know? (When you meet, where you meet, meeting cancelled for a week, bring materials, plans for next time, etc.)</em></label> <br>
+        <textarea id="clubUpdateForm" type="text" rows="3"> </textarea> <br>
+        <button id="clubChangeSubmit" type="submit">Submit</button>
+
+      </form>
+      <br>
+      <a href="https://hs.sharonschools.net/en-US">Sharon High School Website</a>
+      <a href="https:www.sharon.schoology.com">Schoology</a>
+      <p><em>This website is brought to you by the Girls Who Code club of Sharon High School, 2020-2021.</em></p>
+    </footer>
+    <a href = "#backtotop"><button  id="myBtn">Back To Top</button></a>
     <script src="script.js"></script>
   </body>
 </html>
