--- a/clubSites/creativeClubs.html
+++ b/clubSites/creativeClubs.html
@@ -4,26 +4,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="clubscalendars.zplumridge.repl.co/style.css" rel="stylesheet" type="text/css" />
+    <link href="https://clubscalendars.zplumridge.repl.co/style.css" rel="stylesheet" type="text/css" />
   </head>
   
   <body>
     <nav><!--you can use nav to refer specifically to all nav bars on a website, copy and paste this into each new page-->
-      <img id="eagle"src="https://replit.com/@ZPlumridge/ClubsCalendars?from=notifications#shslogo2.png">
-      <a href="https://clubscalendars.zplumridge.repl.co/shsLogo.png"><button>Home</button><a/>
-      <h4><a href="clubSites/businessClubs.html">Business</a></h4>
-      <h4><a href="clubSites/creativeClubs.html">Creative</a></h4>
-      <h4><a href="clubSites/governmentClubs.html">Government</a></h4>
-      <h4><a href="clubSites/publicationsClubs.html">Publications</a></h4>
-      <h4><a href="clubSites/schoolClubs.html">School Leadership</a></h4>
-      <h4><a href="clubSites/stemClubs.html">STEM & Competition</a></h4>
-      <h4><a href="clubSites/volunteeringClubs.html">Volunteering</a></h4>
-      <h4><a href="clubSites/miscClubs.html">Miscellaneous</a></h4>
+      <a href="https://clubscalendars.zplumridge.repl.co/index.html"><img id="eagle" src="https://clubscalendars.zplumridge.repl.co/shsLogo.png"></a><br>
+      <h4><a href="businessClubs.html">Business</a></h4>
+      <h4><a href="creativeClubs.html">Creative</a></h4>
+      <h4><a href="governmentClubs.html">Government</a></h4>
+      <h4><a href="publicationsClubs.html">Publications</a></h4>
+      <h4><a href="schoolClubs.html">School Leadership</a></h4>
+      <h4><a href="stemClubs.html">STEM & Competition</a></h4>
+      <h4><a href="volunteeringClubs.html">Volunteering</a></h4>
+      <h4><a href="miscClubs.html">Miscellaneous</a></h4>
     </nav>
 
     <div class="main">
 
-      <h1>Creative Clubs: </h1><!--add in-site links for clubs on this page-->
+      <h1>Creative Clubs</h1>
+      <h1>Clubs on this page:</h1>
 
       <a href="#creativeWriting"><button>Creative Writing</button></a>
       <a href="#culinary"><button>Culinary</button></a>
@@ -60,6 +60,28 @@
       <a href="http://www.shstheatrecompany.org">shstheatrecompany.org</a>
 
     </div>
+
+    <footer>
+      <br>
+      <!--add more nav bar, contact us, etc.  -->
+      <!-- SHS, SPS websites, schoology-->
+      <!-- then copy this footer to other pages-->
+      <form>
+        <h4>Update club information</h4>
+        <label for="nameForm">Your name: </label>
+        <input id="nameForm" type="text"><br><br>
+        <label for="clubNameForm">Club name: </label> <br>
+        <input id="clubNameForm" type="text"> <br> <br>
+        <label for="clubUpdateForm"><em>What's changed? What do you want people to know? (When you meet, where you meet, meeting cancelled for a week, bring materials, plans for next time, etc.)</em></label> <br>
+        <textarea id="clubUpdateForm" type="text" rows="3"> </textarea> <br>
+        <button id="clubChangeSubmit" type="submit">Submit</button>
+
+      </form>
+      <br>
+      <a href="https://hs.sharonschools.net/en-US">Sharon High School Website</a>
+      <a href="https:www.sharon.schoology.com">Schoology</a>
+      <p><em>This website is brought to you by the Girls Who Code club of Sharon High School, 2020-2021.</em></p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
