--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
 </head>
 
 <body>
-
-	<!-- Some stuff to add or change: organize navigation bar and updates by divs -->
   <a name="backtotop"></a>
 	<nav>
 		<!--you can use nav to refer specifically to all nav bars on a website, copy and paste this into each new page-->
 		<!-- We may want to have a page per section instead of a page per club, to speed it all up.-->
-		<img id="eagle" src="shsLogo.png"><br>
-    <h4><a href="index.html">Home</a></h4>
+		<a href="index.html"><img id="eagle" src="shsLogo.png"></a><br>
     <h4><a href="clubSites/businessClubs.html">Business</a></h4>
     <h4><a href="clubSites/creativeClubs.html">Creative</a></h4>
     <h4><a href="clubSites/governmentClubs.html">Government</a></h4>
@@ -26,8 +23,8 @@
     <h4><a href="clubSites/stemClubs.html">STEM & Competition</a></h4>
     <h4><a href="clubSites/volunteeringClubs.html">Volunteering</a></h4>
     <h4><a href="clubSites/miscClubs.html">Miscellaneous</a></h4>
-    
   </nav>
+
   <div class="main">
     <h1 id="title">Sharon High School Clubs</h1>
     <h4 class="subtitle">An interactive and flexible catalogue presented by the Girls Who Code club</h4>
@@ -40,10 +37,9 @@
     <!--Refresh button? -->
 
     <h2>Calendar</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23781c1f&amp;ctz=America%2FNew_York&amp;src=Y184ZzJsdGE0MGc4ZTVtY21naDVkaTlkN2c3Z0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%234285F4&amp;showTitle=0&amp;showPrint=0" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23781c1f&amp;ctz=America%2FNew_York&amp;src=Y184ZzJsdGE0MGc4ZTVtY21naDVkaTlkN2c3Z0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%234285F4&amp;showTitle=0&amp;showPrint=0" style="border:solid 5px #7a1c20" width="100%" height="500" frameborder="0" scrolling="no"></iframe>
     <!-- This is the one using the GWC gmail account that we should switch over to. <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffd700&amp;ctz=America%2FNew_York&amp;src=bTFudG5pdjV0a3VldmtkNjIwYm1xNTlzZG9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%237CB342&amp;showNav=1&amp;showDate=1&amp;showPrint=0&amp;showTabs=1&amp;showCalendars=1&amp;showTz=0" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>-->
     <a href = "#backtotop"><button  id="myBtn">Back To Top</button></a>
-    <script src="script.js"></script>
 
     <footer>
       <!--add more nav bar, contact us, etc.  -->
@@ -60,8 +56,13 @@
         <button id="clubChangeSubmit" type="submit">Submit</button>
 
       </form>
+      <br>
+      <a href="https://hs.sharonschools.net/en-US">Sharon High School Website</a>
+      <a href="https:www.sharon.schoology.com">Schoology</a>
+      <p><em>This website is brought to you by the Girls Who Code club of Sharon High School, 2020-2021.</em></p>
     </footer>
  </div>
-  </body>
+<script src="script.js"></script>
+</body>
   
 </html>
