Added more clubs, fixed footer glitch

--- a/clubSites/businessClubs.html
+++ b/clubSites/businessClubs.html
@@ -61,7 +61,9 @@
       <p>Zoom</p>
       <p>Contact: Venya Gupta @ vgupta2022@sharonschools.net, Sarah Yi @ syi2022@sharonschools.net, or Niki Murthy @ nmurthy2022@sharonschools.net</p>
       <p>Invest in a stock market simulation and learn about stocks.</p>
-    </div>
+    
+
+    <a href = "#backtotop"><button  id="myBtn">Back To Top</button></a>
 
     <footer>
       <!--add more nav bar, contact us, etc.  -->
@@ -83,7 +85,9 @@
       <a href="https:www.sharon.schoology.com">Schoology</a>
       <p><em>This website is brought to you by the Girls Who Code club of Sharon High School, 2020-2021.</em></p>
     </footer>
+
     <a href = "#backtotop"><button  id="myBtn">Back To Top</button></a>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
