--- a/clubSites/creativeClubs.html
+++ b/clubSites/creativeClubs.html
@@ -8,6 +8,7 @@
   </head>
   
   <body>
+    <a name="backtotop"></a>
     <nav><!--you can use nav to refer specifically to all nav bars on a website, copy and paste this into each new page-->
       <a href="https://clubscalendars.zplumridge.repl.co/index.html"><img id="eagle" src="https://clubscalendars.zplumridge.repl.co/shsLogo.png"></a><br>
       <h4><a href="businessClubs.html">Business</a></h4>
@@ -59,7 +60,9 @@
       <p>Contact: </br> Director (Mr. Langmeyer) - elangmeyer@sharonschools.net </br> Presidents - shstcpresident@gmail.com </br> Stage Manager - shstcstagemanager@gmail.com</p>
       <a href="http://www.shstheatrecompany.org">shstheatrecompany.org</a>
 
-    </div>
+    
+
+    <a href = "#backtotop"><button  id="myBtn">Back To Top</button></a>
 
     <footer>
       <br>
@@ -82,6 +85,7 @@
       <a href="https:www.sharon.schoology.com">Schoology</a>
       <p><em>This website is brought to you by the Girls Who Code club of Sharon High School, 2020-2021.</em></p>
     </footer>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
