--- a/clubSites/governmentClubs.html
+++ b/clubSites/governmentClubs.html
@@ -12,7 +12,6 @@
     <a name="backtotop"></a>
     <nav>
       <a href="https://clubscalendars.zplumridge.repl.co/index.html"><img id="eagle" src="https://clubscalendars.zplumridge.repl.co/shsLogo.png"></a><br>
-      <button>Home</button><a/>
       <h4><a href="businessClubs.html">Business</a></h4>
       <h4><a href="creativeClubs.html">Creative</a></h4>
       <h4><a href="governmentClubs.html">Government</a></h4>
@@ -60,7 +59,9 @@
       <p>Times: 3pm</p>
       <p></p>
       <p>Contact  at <a></a></p>
-    </div>
+    
+
+    <a href = "#backtotop"><button  id="myBtn">Back To Top</button></a>
 
     <footer>
       <!--add more nav bar, contact us, etc.  -->
@@ -82,6 +83,7 @@
       <a href="https:www.sharon.schoology.com">Schoology</a>
       <p><em>This website is brought to you by the Girls Who Code club of Sharon High School, 2020-2021.</em></p>
     </footer>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
