--- a/clubSites/publicationsClubs.html
+++ b/clubSites/publicationsClubs.html
@@ -33,7 +33,8 @@
       
 
       <h1 id="euphony">Euphony</h1>
-      <p>EB</p>
+      <p>Wednesday</p>
+      <p>3:30-4:30 pm</p>
       <p>Zoom</p>
       <p><a href="euphonymagazine.org">euphonymagazine.org</a></p>
       <p>Contact: <br> Dana Blatte <a href="mailto:dblatte2022@sharonschools.net">dblatte2022@sharonschools.net</a> <br>
@@ -65,7 +66,9 @@
       Ms. Fox <a href="mailto:mfox@sharonschools.net">mfox@sharonschools.net</a> <br>
       Ms. Garr <a href="egarr@sharonschools.net">egarr@sharonschools.net</a></p>
       <p>Work with an online graphic editing software, write articles, and take/collect photos of school activities.</p>
-    </div>
+    
+
+    <a href = "#backtotop"><button  id="myBtn">Back To Top</button></a>
 
     <footer>
       <!--add more nav bar, contact us, etc.  -->
@@ -87,6 +90,7 @@
       <a href="https:www.sharon.schoology.com">Schoology</a>
       <p><em>This website is brought to you by the Girls Who Code club of Sharon High School, 2020-2021.</em></p>
     </footer>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
