--- a/clubSites/schoolClubs.html
+++ b/clubSites/schoolClubs.html
@@ -30,6 +30,8 @@
       <h1>Groups on this page: </h1><!--add in-site links for clubs on this page-->
       <a href="#stuco"><button>Student Council</button></a>
       <a href="#planningboard"><button>Planning Board</button></a>
+      <a href="#nextgen"><button>Next Generation</button></a>
+      <a href="#stumentors"><button>Student Mentors</button></a>
 
       <h1 id="stuco">Student Council</h1>
       <p>Dates: Tuesday</p>
@@ -41,8 +43,22 @@
       <p>Dates</p>
       <p>Times</p>
       <p>Place</p>
+      <p>Contact: <a href="https://www.facebook.com/groups/153256488075026" target="_blank">FB Group</a></p>
+      <pWe are a team of mentors dedicated to helping incoming freshman with the transition into high school. Our long term goal is to effectively bridge the gap between SMS and SHS. ></p>
+
+      <h1 id="nextgen">Next Generation</h1>
+      <p>Dates</p>
+      <p>Times</p>
+      <p>Place</p>
       <p>Contact</p>
-    </div>
+
+      <h1 id="stumentors">Student Mentors</h1>
+      <p>Dates</p>
+      <p>Times</p>
+      <p>Place</p>
+      <p>Contact</p>
+
+    <a href = "#backtotop"><button  id="myBtn">Back To Top</button></a>
 
     <footer>
       <!--add more nav bar, contact us, etc.  -->
@@ -64,6 +80,7 @@
       <a href="https:www.sharon.schoology.com">Schoology</a>
       <p><em>This website is brought to you by the Girls Who Code club of Sharon High School, 2020-2021.</em></p>
     </footer>
+     </div>
     <script src="script.js"></script>
   </body>
 </html>
