--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
     <h4 class="subtitle">An interactive and flexible catalogue presented by the Girls Who Code club</h4>
     <h2>Updates</h2>
     <div class="updates">
-      <h3>Super Important Update!</h3>
-      <small><em>3/3/21</em></small>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="update">
+        <h3>Welcome!</h3>
+        <small><em>5/5/21</em></small>
+        <p>Hello! Thanks for checking out our website! Click on the links in the sidebar to go to categories of clubs, or scroll down to check the calendar and updates. If you'd like to change the information about your club, or post an update here, please complete the form at the bottom of the page. <em>Issues? Reach out to Girls Who Code.</em></p>
+      </div>
     </div>
     <!--Refresh button? -->
 
