added js for forms which is not currently working

--- a/clubSites/publicationsClubs.html
+++ b/clubSites/publicationsClubs.html
@@ -91,6 +91,7 @@
       <p><em>This website is brought to you by the Girls Who Code club of Sharon High School, 2020-2021.</em></p>
     </footer>
     </div>
+    <script src="jquery-3.5.1.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
