--- a/clubSites/schoolClubs.html
+++ b/clubSites/schoolClubs.html
@@ -43,20 +43,19 @@
       <p>Dates</p>
       <p>Times</p>
       <p>Place</p>
-      <p>Contact: <a href="https://www.facebook.com/groups/153256488075026" target="_blank">FB Group</a></p>
-      <pWe are a team of mentors dedicated to helping incoming freshman with the transition into high school. Our long term goal is to effectively bridge the gap between SMS and SHS. ></p>
+      <p>Contact</p>
+      
 
       <h1 id="nextgen">Next Generation</h1>
-      <p>Dates</p>
-      <p>Times</p>
-      <p>Place</p>
-      <p>Contact</p>
+      <p>Times: Afternoon eagle block</p>
+      <p>Sign up </p>
+      <p>kchen2021@sharonschools.net, </p>
 
       <h1 id="stumentors">Student Mentors</h1>
-      <p>Dates</p>
-      <p>Times</p>
+      <p>Dates: See facebook group</p>
       <p>Place</p>
-      <p>Contact</p>
+      <p>Contact: <a href="https://www.facebook.com/groups/153256488075026" target="_blank">FB Group</a></p>
+      <p>We are a team of mentors dedicated to helping incoming freshman with the transition into high school. Our long term goal is to effectively bridge the gap between SMS and SHS!</p>
 
     <a href = "#backtotop"><button  id="myBtn">Back To Top</button></a>
 
@@ -81,6 +80,7 @@
       <p><em>This website is brought to you by the Girls Who Code club of Sharon High School, 2020-2021.</em></p>
     </footer>
      </div>
+     <script src="jquery-3.5.1.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
