--- a/clubSites/stemClubs.html
+++ b/clubSites/stemClubs.html
@@ -43,6 +43,8 @@
       <p>3pm</p>
       <p>Zoom link is on schoology group, the code:7PSW-CC89-KBV9D</p>
       <a href="ayi2021@sharonschools.net">ayi2021@sharonschools.net</a>, mli2021@sharonschools.net, kchen2020@sharonschools.net</p>
+      <p>Compete in advanced science topics in trivia format. These topics consist of math, chemis
+
 
       <h2>Latin</h2>
       <p>Wednesday</p>
@@ -108,6 +110,7 @@
       <p><em>This website is brought to you by the Girls Who Code club of Sharon High School, 2020-2021.</em></p>
     </footer>
     </div>
+    <script src="jquery-3.5.1.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
