--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <!--add more nav bar, contact us, etc.  -->
       <!-- SHS, SPS websites, schoology-->
       <!-- then copy this footer to other pages-->
-      <form>
+      <form id="updateForm">
         <h4>Update club information</h4>
         <label for="nameForm">Your name: </label>
         <input id="nameForm" type="text"><br><br>
@@ -63,8 +63,9 @@
       <a href="https:www.sharon.schoology.com">Schoology</a>
       <p><em>This website is brought to you by the Girls Who Code club of Sharon High School, 2020-2021.</em></p>
     </footer>
- </div>
-<script src="script.js"></script>
+  </div>
+  <script src="jquery-3.5.1.min.js"></script>
+  <script src="script.js"></script> 
 </body>
   
 </html>
