--- a/clubSites/businessClubs.html
+++ b/clubSites/businessClubs.html
@@ -88,6 +88,7 @@
 
     <a href = "#backtotop"><button  id="myBtn">Back To Top</button></a>
     </div>
+    <script src="jquery-3.5.1.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
