--- a/clubSites/copyThisClubs.html
+++ b/clubSites/copyThisClubs.html
@@ -37,6 +37,7 @@
       <p>Place</p>
       <p>Contact</p>
     </div>
+    <script src="jquery-3.5.1.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
